# beyondmimictest

./: .gitignore  MJCF_VIEWER_README.md  README.md  car_control_example.py  pyproject.toml  requirements_simple.txt  simple_car_test.py  test_car_viewer.py  view_mjcf.py
examples/: basic_vuer_env.py  beyond_mimic_policy.py  car_control.py  car_control_example.py  car_control_gamepad.py  falcon_policy_example.py  g1_control.py  mujoco_sim.py  plot_qpos_comparison.py  plot_right_leg_comparison.py  plot_xyz.py  plot_xyz_forces.py  plot_xyz_trails.py  simple_car_test.py  simple_mujoco_viewer.py  test_car_viewer.py  testvuer.py  vuer_deployment_2.py  vuer_mujoco_sim.py
examples/data/: ball_mujoco.csv  ball_vuer_mujoco.csv  g1_mujoco_cg.csv  g1_mujoco_qpos.csv  g1_mujoco_rk4_full.npz  g1_mujoco_rk4_t3.csv  g1_vuer_mujoco_cg.csv  g1_vuer_mujoco_qpos.csv  g1_vuer_mujoco_rk4_full.npz  g1_vuer_mujoco_rk4_t3.csv
examples/mjcf_models/: ball_drop.mjcf.xml  scene_g1_29dof_freebase.mjcf.xml
vuer_sim_example/: README.md  __init__.py  environment.py  mjcf_viewer.py  params.py  registry.py  setup.py
vuer_sim_example/envs/: base_env.py  env.yaml
vuer_sim_example/policies/: __init__.py  base_policy.py  getmetadata.py  loco_manip_policy.py
vuer_sim_example/sim/: vuer_sim.py
vuer_sim_example/sim2real/: requirements.txt
vuer_sim_example/tasks/: __init__.py  base_task.py  car_env.py  entrypoint.py  falcon_task.py  pick_block.mjcf.xml  pick_block.py
vuer_sim_example/wrappers/: camera_wrapper.py  domain_randomization_wrapper.py  lucid_wrapper.py  multiview_wrapper.py  (+1 more)
(+38 files in other folders)
