[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuer-sim-example"
version = "0.1.0"
description = "Simple MJCF viewer using Vuer"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "vuer[all]",
    "mujoco",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["vuer*", "vuer_sim_example*"]
exclude = ["assets*", "examples*", "scripts*"]